--- a/src/app/add/add.component.html
+++ b/src/app/add/add.component.html
@@ -1,3 +1,19 @@
-<p>
-  add works!
-</p>
+<div class="container">
+  <label>Add Ingredient</label>
+  <input type="text" (keyup)="onTyped()" [(ngModel)]="search" placeholder="search"/>
+  {{search}}
+  <div *ngIf="search">
+    <ul>
+     <li (click)="addIngredient(ingredient)" *ngFor="let ingredient of ingredients">
+       {{ingredient}}
+     </li>
+   </ul>
+  </div>
+  <button (click)="onReset()">Reset</button>
+  <button (click)="onPost()">Send form</button>
+  <input [(ngModel)]="image" type="file" accept="image/*" capture="camera" name="avatar" (change)="onChange($event)"/>
+  <measure-input [nameInput]="testString"></measure-input>
+
+<!--*ngFor="#name of added"[name]="additon" (selection)="onEdidtMeasure($event)"-->
+
+</div>
