--- a/src/app/add/add.component.html
+++ b/src/app/add/add.component.html
@@ -1,5 +1,6 @@
 <div class="container">
   <label>Add Ingredient</label>
+  <input type="text" [(ngModel)]="drinkName" placeholder="Navngi drink..."/>
   <input type="text" (keyup)="onTyped()" [(ngModel)]="search" placeholder="search"/>
   {{search}}
   <div *ngIf="search">
@@ -12,8 +13,5 @@
   <button (click)="onReset()">Reset</button>
   <button (click)="onPost()">Send form</button>
   <input [(ngModel)]="image" type="file" accept="image/*" capture="camera" name="avatar" (change)="onChange($event)"/>
-  <measure-input [nameInput]="testString"></measure-input>
-
-<!--*ngFor="#name of added"[name]="additon" (selection)="onEdidtMeasure($event)"-->
-
+  <app-measure *ngFor="let addition of added" [nameInput]="addition" (selection)="onEdidtMeasure($event)"></app-measure>
 </div>
